--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: [G26 Neural Network Framework]
+description: [This is a short description for our project and what it is capable of]
